--- a/main.css
+++ b/main.css
@@ -32,3 +32,15 @@ form {
     padding-top: 20px;
     padding-bottom: 100px;
 }
+
+.answer {
+    margin: 0 auto;
+    height: 100px;
+    width: 100px;
+    background-color: darkblue;
+    border-radius: 50px; 
+    font-size: 50px;
+    font-weight: bold;
+    border: 2px solid grey;
+    line-height: 150px;
+}
