--- a/main.css
+++ b/main.css
@@ -39,7 +39,8 @@ form {
     width: 100px;
     background-color: darkblue;
     border-radius: 50px; 
-    font-size: 50px;
+    font-size: 15px;
+    color: white;
     font-weight: bold;
     border: 2px solid grey;
     line-height: 150px;
